add user section

--- a/src/styles/helpers/mixins.scss
+++ b/src/styles/helpers/mixins.scss
@@ -18,3 +18,8 @@
 	margin: auto;
 	position: absolute;
 }
+
+@mixin inlineblock ($valine: top) {
+	display: inline-block;
+	vertical-align: $valine;
+}
