--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -4,3 +4,6 @@ $lhheader:60px;
 $lhfooter:80px;
 
 $em-base: 16px !default;
+
+$z-depth-1: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$checked-color: #03A9F4;
