add first section-checklist

--- a/src/img/sprites/sprite.scss
+++ b/src/img/sprites/sprite.scss
@@ -11,77 +11,132 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$archived-icon-name: 'archived_icon';
+$archived-icon-x: 113px;
+$archived-icon-y: 128px;
+$archived-icon-offset-x: -113px;
+$archived-icon-offset-y: -128px;
+$archived-icon-width: 16px;
+$archived-icon-height: 14px;
+$archived-icon-total-width: 200px;
+$archived-icon-total-height: 199px;
+$archived-icon-image: 'sprite.png';
+$archived-icon: (113px, 128px, -113px, -128px, 16px, 14px, 200px, 199px, 'sprite.png', 'archived_icon', );
+$protected-icon-name: 'protected_icon';
+$protected-icon-x: 0px;
+$protected-icon-y: 184px;
+$protected-icon-offset-x: 0px;
+$protected-icon-offset-y: -184px;
+$protected-icon-width: 12px;
+$protected-icon-height: 15px;
+$protected-icon-total-width: 200px;
+$protected-icon-total-height: 199px;
+$protected-icon-image: 'sprite.png';
+$protected-icon: (0px, 184px, 0px, -184px, 12px, 15px, 200px, 199px, 'sprite.png', 'protected_icon', );
+$star-icon-name: 'star_icon';
+$star-icon-x: 0px;
+$star-icon-y: 128px;
+$star-icon-offset-x: 0px;
+$star-icon-offset-y: -128px;
+$star-icon-width: 17px;
+$star-icon-height: 16px;
+$star-icon-total-width: 200px;
+$star-icon-total-height: 199px;
+$star-icon-image: 'sprite.png';
+$star-icon: (0px, 128px, 0px, -128px, 17px, 16px, 200px, 199px, 'sprite.png', 'star_icon', );
+$share-icon-name: 'share_icon';
+$share-icon-x: 57px;
+$share-icon-y: 128px;
+$share-icon-offset-x: -57px;
+$share-icon-offset-y: -128px;
+$share-icon-width: 16px;
+$share-icon-height: 16px;
+$share-icon-total-width: 200px;
+$share-icon-total-height: 199px;
+$share-icon-image: 'sprite.png';
+$share-icon: (57px, 128px, -57px, -128px, 16px, 16px, 200px, 199px, 'sprite.png', 'share_icon', );
+$url-icon-name: 'url_icon';
+$url-icon-x: 0px;
+$url-icon-y: 0px;
+$url-icon-offset-x: 0px;
+$url-icon-offset-y: 0px;
+$url-icon-width: 26px;
+$url-icon-height: 26px;
+$url-icon-total-width: 200px;
+$url-icon-total-height: 199px;
+$url-icon-image: 'sprite.png';
+$url-icon: (0px, 0px, 0px, 0px, 26px, 26px, 200px, 199px, 'sprite.png', 'url_icon', );
 $footer-soc-fb-name: 'footer-soc-fb';
-$footer-soc-fb-x: 124px;
-$footer-soc-fb-y: 56px;
-$footer-soc-fb-offset-x: -124px;
-$footer-soc-fb-offset-y: -56px;
+$footer-soc-fb-x: 190px;
+$footer-soc-fb-y: 0px;
+$footer-soc-fb-offset-x: -190px;
+$footer-soc-fb-offset-y: 0px;
 $footer-soc-fb-width: 10px;
 $footer-soc-fb-height: 20px;
-$footer-soc-fb-total-width: 144px;
-$footer-soc-fb-total-height: 84px;
+$footer-soc-fb-total-width: 200px;
+$footer-soc-fb-total-height: 199px;
 $footer-soc-fb-image: 'sprite.png';
-$footer-soc-fb: (124px, 56px, -124px, -56px, 10px, 20px, 144px, 84px, 'sprite.png', 'footer-soc-fb', );
+$footer-soc-fb: (190px, 0px, -190px, 0px, 10px, 20px, 200px, 199px, 'sprite.png', 'footer-soc-fb', );
 $footer-soc-tw-name: 'footer-soc-tw';
-$footer-soc-tw-x: 124px;
-$footer-soc-tw-y: 0px;
-$footer-soc-tw-offset-x: -124px;
-$footer-soc-tw-offset-y: 0px;
+$footer-soc-tw-x: 128px;
+$footer-soc-tw-y: 62px;
+$footer-soc-tw-offset-x: -128px;
+$footer-soc-tw-offset-y: -62px;
 $footer-soc-tw-width: 20px;
 $footer-soc-tw-height: 16px;
-$footer-soc-tw-total-width: 144px;
-$footer-soc-tw-total-height: 84px;
+$footer-soc-tw-total-width: 200px;
+$footer-soc-tw-total-height: 199px;
 $footer-soc-tw-image: 'sprite.png';
-$footer-soc-tw: (124px, 0px, -124px, 0px, 20px, 16px, 144px, 84px, 'sprite.png', 'footer-soc-tw', );
+$footer-soc-tw: (128px, 62px, -128px, -62px, 20px, 16px, 200px, 199px, 'sprite.png', 'footer-soc-tw', );
 $soc-fb-name: 'soc-fb';
 $soc-fb-x: 0px;
-$soc-fb-y: 0px;
+$soc-fb-y: 66px;
 $soc-fb-offset-x: 0px;
-$soc-fb-offset-y: 0px;
+$soc-fb-offset-y: -66px;
 $soc-fb-width: 22px;
 $soc-fb-height: 22px;
-$soc-fb-total-width: 144px;
-$soc-fb-total-height: 84px;
+$soc-fb-total-width: 200px;
+$soc-fb-total-height: 199px;
 $soc-fb-image: 'sprite.png';
-$soc-fb: (0px, 0px, 0px, 0px, 22px, 22px, 144px, 84px, 'sprite.png', 'soc-fb', );
+$soc-fb: (0px, 66px, 0px, -66px, 22px, 22px, 200px, 199px, 'sprite.png', 'soc-fb', );
 $soc-in-name: 'soc-in';
 $soc-in-x: 62px;
-$soc-in-y: 0px;
+$soc-in-y: 66px;
 $soc-in-offset-x: -62px;
-$soc-in-offset-y: 0px;
+$soc-in-offset-y: -66px;
 $soc-in-width: 22px;
 $soc-in-height: 22px;
-$soc-in-total-width: 144px;
-$soc-in-total-height: 84px;
+$soc-in-total-width: 200px;
+$soc-in-total-height: 199px;
 $soc-in-image: 'sprite.png';
-$soc-in: (62px, 0px, -62px, 0px, 22px, 22px, 144px, 84px, 'sprite.png', 'soc-in', );
+$soc-in: (62px, 66px, -62px, -66px, 22px, 22px, 200px, 199px, 'sprite.png', 'soc-in', );
 $soc-tw-name: 'soc-tw';
-$soc-tw-x: 0px;
-$soc-tw-y: 62px;
-$soc-tw-offset-x: 0px;
-$soc-tw-offset-y: -62px;
+$soc-tw-x: 128px;
+$soc-tw-y: 0px;
+$soc-tw-offset-x: -128px;
+$soc-tw-offset-y: 0px;
 $soc-tw-width: 22px;
 $soc-tw-height: 22px;
-$soc-tw-total-width: 144px;
-$soc-tw-total-height: 84px;
+$soc-tw-total-width: 200px;
+$soc-tw-total-height: 199px;
 $soc-tw-image: 'sprite.png';
-$soc-tw: (0px, 62px, 0px, -62px, 22px, 22px, 144px, 84px, 'sprite.png', 'soc-tw', );
+$soc-tw: (128px, 0px, -128px, 0px, 22px, 22px, 200px, 199px, 'sprite.png', 'soc-tw', );
 $soc-vk-name: 'soc-vk';
-$soc-vk-x: 62px;
-$soc-vk-y: 62px;
-$soc-vk-offset-x: -62px;
-$soc-vk-offset-y: -62px;
+$soc-vk-x: 66px;
+$soc-vk-y: 0px;
+$soc-vk-offset-x: -66px;
+$soc-vk-offset-y: 0px;
 $soc-vk-width: 22px;
 $soc-vk-height: 22px;
-$soc-vk-total-width: 144px;
-$soc-vk-total-height: 84px;
+$soc-vk-total-width: 200px;
+$soc-vk-total-height: 199px;
 $soc-vk-image: 'sprite.png';
-$soc-vk: (62px, 62px, -62px, -62px, 22px, 22px, 144px, 84px, 'sprite.png', 'soc-vk', );
-$spritesheet-width: 144px;
-$spritesheet-height: 84px;
+$soc-vk: (66px, 0px, -66px, 0px, 22px, 22px, 200px, 199px, 'sprite.png', 'soc-vk', );
+$spritesheet-width: 200px;
+$spritesheet-height: 199px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($footer-soc-fb, $footer-soc-tw, $soc-fb, $soc-in, $soc-tw, $soc-vk, );
-$spritesheet: (144px, 84px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($archived-icon, $protected-icon, $star-icon, $share-icon, $url-icon, $footer-soc-fb, $footer-soc-tw, $soc-fb, $soc-in, $soc-tw, $soc-vk, );
+$spritesheet: (200px, 199px, 'sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
