--- a/src/styles/sections/main_section.scss
+++ b/src/styles/sections/main_section.scss
@@ -110,6 +110,7 @@
     border-radius: 5px;
     padding: 30px;
     margin-bottom: 12px;
+    position: relative;
 }
 
 /*checklist*/
@@ -118,9 +119,14 @@
     height: auto;
     list-style-type: none;
     width: 100%;
+    margin-bottom: 8px;
     &__item{
         text-align: center;
         width: 100%;
+        margin-bottom: 11px;
+        &:last-child{
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -130,7 +136,7 @@
     font-size: 16px;
     font-weight: 400;
     height: 1.2em;
-    margin: .6em auto;
+    margin: 0 .6em 0 0;
     position: relative;
     text-align: left;
     width: 95%;
@@ -190,8 +196,75 @@
         border-top: none;
         box-shadow: -1px 1px 1px rgba(black, .1);
         height: .33em;
-        left: .10em;
+        left: .2em;
         top: .2em;
         transform: rotate(-45deg);
-        width: .66em;   }
+        width: .55em;   }
+}
+/*label*/
+.mark__top{
+    width: 0;
+	height: 0;
+	border-top: 48px solid #EF4B2B;
+	border-left: 48px solid transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 0 5px 0 0;
+    &:before{
+        content: "";
+        display: block;
+        position: absolute;
+        left: -48px;
+        top: -48px;
+        border-style: solid;
+        border-width: 48px 0 0 48px;
+        border-color: transparent transparent transparent #fff;
+    }
+    &:after{
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: 10;
+        top: -44px;
+        left: -20px;
+        @include sprite($star-icon);
+    }
+}
+
+.time{
+    color: #aeb4ba;
+    font-size: 16px;
+    text-align: left;
+    float: left;
+}
+
+.share{
+    float: right;
+    &__list{
+        position: relative;
+        @include clearfix;
+        &__item{
+            display: block;
+            float: left;
+            margin-right: 25px;
+            &:last-child{
+                margin-right: 0;
+            }
+            &__link{
+
+                .share__icons{
+                    display: block;
+                }
+                .share__icon{
+                    @include sprite($share_icon);
+                }
+                .url__icon{
+                    @include sprite($url_icon);
+                    position: relative;
+                    top: -5px;
+                }
+            }
+        }
+    }
 }
