--- a/src/styles/sections/main_section.scss
+++ b/src/styles/sections/main_section.scss
@@ -1,6 +1,6 @@
 .main{
     position: relative;
-    margin: 30px 0 170px;
+    margin: 30px 0 0px;
     @include clearfix;
 }
 
@@ -265,6 +265,50 @@
                     top: -5px;
                 }
             }
+        }
+    }
+}
+
+.sort__row{
+    position: relative;
+    @include clearfix;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom:1px solid #BDBDBD;
+    &--bb{
+        border:none;
+    }
+
+    .sort__name{
+        float: left;
+        &__icon{
+            display: block;
+            float: left;
+            margin-right: 16px;
+            @include sprite($sort_icon);
+            &:hover{
+                @include sprite($sort_icon_hover);
+                cursor: pointer;
+            }
+        }
+        &__title{
+            float: left;
+            font-size: 16px;
+            color: #333333;
+            font-weight: 600;
+        }
+    }
+
+    .sort__list{
+        float: right;
+        color: #858585;
+        font-size: 16px;
+        &__number{
+            float: left;
+            margin-right: 50px;
+        }
+        &__date{
+            float: left;
         }
     }
 }
