--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -85,3 +85,8 @@ input[type="checkbox"], input[type="radio"] {
     box-sizing: border-box;
     padding: 0;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+}
