--- a/src/styles/sections/main_section.scss
+++ b/src/styles/sections/main_section.scss
@@ -1,6 +1,6 @@
 .main{
     position: relative;
-    margin: 30px 0 0px;
+    margin: 30px 0 170px;
     @include clearfix;
 }
 
@@ -310,5 +310,37 @@
         &__date{
             float: left;
         }
+    }
+}
+
+/*gallery*/
+.gallery{
+    position: relative;
+    padding-bottom: 24px;
+    margin-bottom: 14px;
+    border-bottom:1px solid #BDBDBD;
+    @include clearfix;
+    &__item{
+        width: 30%;
+        float: left;
+        margin-right: 12px;
+        margin-bottom: 6px;
+    }
+}
+
+.reminder{
+    position: relative;
+    margin-bottom: 24px;
+    @include clearfix;
+    &__icon{
+        display: block;
+        float: left;
+        margin-right: 14px;
+        @include sprite($date_icon);
+    }
+    &__date{
+        font-size: 16px;
+        line-height: 24px;
+        color: #858585;
     }
 }
