--- a/src/styles/sections/main_section.scss
+++ b/src/styles/sections/main_section.scss
@@ -252,6 +252,7 @@
                 margin-right: 0;
             }
             &__link{
+                display: block;
 
                 .share__icons{
                     display: block;
@@ -534,8 +535,59 @@
         display: block;
         position: absolute;
         z-index: 10;
-        top: -44px;
-        left: -20px;
+        top: -41px;
+        left: -22px;
         @include sprite($archived-icon);
     }
+}
+
+.tooltip{
+    background: rgba(0,0,0, .7);
+    bottom: 100%;
+    color: #fff;
+    text-align: center;
+    border-radius: 3px;
+    display: block;
+    left: -7px;
+    margin-bottom: 15px;
+    opacity: 0;
+    padding: 10px 12px;
+    pointer-events: none;
+    position: absolute;
+    width: 135px;
+    transform: translateY(10px);
+    transition: all .25s ease-out;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+          span{
+              background-color: #37b7ec;
+              font-size: 14px;
+              line-height: 16px;
+          }
+          &:before{
+              bottom: -20px;
+              content: " ";
+              display: block;
+              height: 20px;
+              left: 0;
+              position: absolute;
+              width: 100%;
+          }
+          &:after{
+              border-left: solid transparent 7px;
+              border-right: solid transparent 7px;
+              border-top: solid rgba(0,0,0, .7) 7px;
+              bottom: -7px;
+              content: " ";
+              height: 0;
+              left: 50%;
+              margin-left: -13px;
+              position: absolute;
+              width: 0;
+          }
+}
+
+.share__list__item__link:hover .tooltip{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0px);
 }
