--- a/src/styles/sections/main_section.scss
+++ b/src/styles/sections/main_section.scss
@@ -139,7 +139,7 @@
     margin: 0 .6em 0 0;
     position: relative;
     text-align: left;
-    width: 95%;
+    width: 100%;
     &__checkbox{
         -webkit-border-radius: .125em;
         border-radius: .125em;
@@ -327,6 +327,9 @@
         margin-right: 12px;
         margin-bottom: 6px;
     }
+    &__picture{
+        height: 140px;
+    }
 }
 
 .reminder{
@@ -366,15 +369,21 @@
         position: relative;
         @include clearfix;
         &__item{
-            width: 23%;
+            width: 26%;
             float: left;
             margin-right: 12px;
             margin-bottom: 6px;
+            &:nth-child(2){
+                width: 10%;
+            }
+        }
+        &__picture{
+            height: 140px;
         }
     }
 
     .description__map{
-        width: 300px;
+        width: 47%;
         height: 200px;
         margin-right: 15px;
         float: left;
@@ -382,6 +391,7 @@
 
     .description__address{
         float: left;
+        width: 50%;
         &__title{
             font-size: 16px;
             line-height: 19px;
