work media screan, add script head popup, add share modal

--- a/src/img/sprites/sprite.scss
+++ b/src/img/sprites/sprite.scss
@@ -12,164 +12,230 @@ At the bottom of this section, we provide information about the spritesheet itse
 $spritesheet: width height image $spritesheet-sprites;
 */
 $archived-icon-name: 'archived_icon';
-$archived-icon-x: 190px;
-$archived-icon-y: 54px;
-$archived-icon-offset-x: -190px;
-$archived-icon-offset-y: -54px;
+$archived-icon-x: 116px;
+$archived-icon-y: 214px;
+$archived-icon-offset-x: -116px;
+$archived-icon-offset-y: -214px;
 $archived-icon-width: 16px;
 $archived-icon-height: 14px;
-$archived-icon-total-width: 206px;
-$archived-icon-total-height: 204px;
+$archived-icon-total-width: 338px;
+$archived-icon-total-height: 284px;
 $archived-icon-image: 'sprite.png';
-$archived-icon: (190px, 54px, -190px, -54px, 16px, 14px, 206px, 204px, 'sprite.png', 'archived_icon', );
+$archived-icon: (116px, 214px, -116px, -214px, 16px, 14px, 338px, 284px, 'sprite.png', 'archived_icon', );
 $protected-icon-name: 'protected_icon';
-$protected-icon-x: 50px;
-$protected-icon-y: 184px;
-$protected-icon-offset-x: -50px;
-$protected-icon-offset-y: -184px;
+$protected-icon-x: 326px;
+$protected-icon-y: 0px;
+$protected-icon-offset-x: -326px;
+$protected-icon-offset-y: 0px;
 $protected-icon-width: 12px;
 $protected-icon-height: 15px;
-$protected-icon-total-width: 206px;
-$protected-icon-total-height: 204px;
+$protected-icon-total-width: 338px;
+$protected-icon-total-height: 284px;
 $protected-icon-image: 'sprite.png';
-$protected-icon: (50px, 184px, -50px, -184px, 12px, 15px, 206px, 204px, 'sprite.png', 'protected_icon', );
+$protected-icon: (326px, 0px, -326px, 0px, 12px, 15px, 338px, 284px, 'sprite.png', 'protected_icon', );
 $star-icon-name: 'star_icon';
-$star-icon-x: 60px;
-$star-icon-y: 128px;
-$star-icon-offset-x: -60px;
-$star-icon-offset-y: -128px;
+$star-icon-x: 218px;
+$star-icon-y: 60px;
+$star-icon-offset-x: -218px;
+$star-icon-offset-y: -60px;
 $star-icon-width: 17px;
 $star-icon-height: 16px;
-$star-icon-total-width: 206px;
-$star-icon-total-height: 204px;
+$star-icon-total-width: 338px;
+$star-icon-total-height: 284px;
 $star-icon-image: 'sprite.png';
-$star-icon: (60px, 128px, -60px, -128px, 17px, 16px, 206px, 204px, 'sprite.png', 'star_icon', );
+$star-icon: (218px, 60px, -218px, -60px, 17px, 16px, 338px, 284px, 'sprite.png', 'star_icon', );
 $date-icon-name: 'date_icon';
-$date-icon-x: 128px;
-$date-icon-y: 62px;
-$date-icon-offset-x: -128px;
-$date-icon-offset-y: -62px;
+$date-icon-x: 218px;
+$date-icon-y: 0px;
+$date-icon-offset-x: -218px;
+$date-icon-offset-y: 0px;
 $date-icon-width: 18px;
 $date-icon-height: 20px;
-$date-icon-total-width: 206px;
-$date-icon-total-height: 204px;
+$date-icon-total-width: 338px;
+$date-icon-total-height: 284px;
 $date-icon-image: 'sprite.png';
-$date-icon: (128px, 62px, -128px, -62px, 18px, 20px, 206px, 204px, 'sprite.png', 'date_icon', );
+$date-icon: (218px, 0px, -218px, 0px, 18px, 20px, 338px, 284px, 'sprite.png', 'date_icon', );
 $sort-icon-name: 'sort_icon';
-$sort-icon-x: 190px;
-$sort-icon-y: 0px;
-$sort-icon-offset-x: -190px;
-$sort-icon-offset-y: 0px;
+$sort-icon-x: 60px;
+$sort-icon-y: 214px;
+$sort-icon-offset-x: -60px;
+$sort-icon-offset-y: -214px;
 $sort-icon-width: 16px;
 $sort-icon-height: 14px;
-$sort-icon-total-width: 206px;
-$sort-icon-total-height: 204px;
+$sort-icon-total-width: 338px;
+$sort-icon-total-height: 284px;
 $sort-icon-image: 'sprite.png';
-$sort-icon: (190px, 0px, -190px, 0px, 16px, 14px, 206px, 204px, 'sprite.png', 'sort_icon', );
+$sort-icon: (60px, 214px, -60px, -214px, 16px, 14px, 338px, 284px, 'sprite.png', 'sort_icon', );
 $sort-icon-hover-name: 'sort_icon_hover';
-$sort-icon-hover-x: 190px;
-$sort-icon-hover-y: 108px;
-$sort-icon-hover-offset-x: -190px;
-$sort-icon-hover-offset-y: -108px;
+$sort-icon-hover-x: 172px;
+$sort-icon-hover-y: 214px;
+$sort-icon-hover-offset-x: -172px;
+$sort-icon-hover-offset-y: -214px;
 $sort-icon-hover-width: 16px;
 $sort-icon-hover-height: 14px;
-$sort-icon-hover-total-width: 206px;
-$sort-icon-hover-total-height: 204px;
+$sort-icon-hover-total-width: 338px;
+$sort-icon-hover-total-height: 284px;
 $sort-icon-hover-image: 'sprite.png';
-$sort-icon-hover: (190px, 108px, -190px, -108px, 16px, 14px, 206px, 204px, 'sprite.png', 'sort_icon_hover', );
+$sort-icon-hover: (172px, 214px, -172px, -214px, 16px, 14px, 338px, 284px, 'sprite.png', 'sort_icon_hover', );
 $share-icon-name: 'share_icon';
-$share-icon-x: 117px;
-$share-icon-y: 128px;
-$share-icon-offset-x: -117px;
-$share-icon-offset-y: -128px;
+$share-icon-x: 218px;
+$share-icon-y: 116px;
+$share-icon-offset-x: -218px;
+$share-icon-offset-y: -116px;
 $share-icon-width: 16px;
 $share-icon-height: 16px;
-$share-icon-total-width: 206px;
-$share-icon-total-height: 204px;
+$share-icon-total-width: 338px;
+$share-icon-total-height: 284px;
 $share-icon-image: 'sprite.png';
-$share-icon: (117px, 128px, -117px, -128px, 16px, 16px, 206px, 204px, 'sprite.png', 'share_icon', );
+$share-icon: (218px, 116px, -218px, -116px, 16px, 16px, 338px, 284px, 'sprite.png', 'share_icon', );
 $url-icon-name: 'url_icon';
-$url-icon-x: 0px;
+$url-icon-x: 152px;
 $url-icon-y: 0px;
-$url-icon-offset-x: 0px;
+$url-icon-offset-x: -152px;
 $url-icon-offset-y: 0px;
 $url-icon-width: 26px;
 $url-icon-height: 26px;
-$url-icon-total-width: 206px;
-$url-icon-total-height: 204px;
+$url-icon-total-width: 338px;
+$url-icon-total-height: 284px;
 $url-icon-image: 'sprite.png';
-$url-icon: (0px, 0px, 0px, 0px, 26px, 26px, 206px, 204px, 'sprite.png', 'url_icon', );
+$url-icon: (152px, 0px, -152px, 0px, 26px, 26px, 338px, 284px, 'sprite.png', 'url_icon', );
+$head-popup-close-name: 'head_popup_close';
+$head-popup-close-x: 54px;
+$head-popup-close-y: 270px;
+$head-popup-close-offset-x: -54px;
+$head-popup-close-offset-y: -270px;
+$head-popup-close-width: 13px;
+$head-popup-close-height: 14px;
+$head-popup-close-total-width: 338px;
+$head-popup-close-total-height: 284px;
+$head-popup-close-image: 'sprite.png';
+$head-popup-close: (54px, 270px, -54px, -270px, 13px, 14px, 338px, 284px, 'sprite.png', 'head_popup_close', );
+$share-popup-close-name: 'share_popup_close';
+$share-popup-close-x: 0px;
+$share-popup-close-y: 270px;
+$share-popup-close-offset-x: 0px;
+$share-popup-close-offset-y: -270px;
+$share-popup-close-width: 14px;
+$share-popup-close-height: 14px;
+$share-popup-close-total-width: 338px;
+$share-popup-close-total-height: 284px;
+$share-popup-close-image: 'sprite.png';
+$share-popup-close: (0px, 270px, 0px, -270px, 14px, 14px, 338px, 284px, 'sprite.png', 'share_popup_close', );
 $footer-soc-fb-name: 'footer-soc-fb';
-$footer-soc-fb-x: 0px;
-$footer-soc-fb-y: 184px;
-$footer-soc-fb-offset-x: 0px;
-$footer-soc-fb-offset-y: -184px;
+$footer-soc-fb-x: 276px;
+$footer-soc-fb-y: 0px;
+$footer-soc-fb-offset-x: -276px;
+$footer-soc-fb-offset-y: 0px;
 $footer-soc-fb-width: 10px;
 $footer-soc-fb-height: 20px;
-$footer-soc-fb-total-width: 206px;
-$footer-soc-fb-total-height: 204px;
+$footer-soc-fb-total-width: 338px;
+$footer-soc-fb-total-height: 284px;
 $footer-soc-fb-image: 'sprite.png';
-$footer-soc-fb: (0px, 184px, 0px, -184px, 10px, 20px, 206px, 204px, 'sprite.png', 'footer-soc-fb', );
+$footer-soc-fb: (276px, 0px, -276px, 0px, 10px, 20px, 338px, 284px, 'sprite.png', 'footer-soc-fb', );
 $footer-soc-tw-name: 'footer-soc-tw';
 $footer-soc-tw-x: 0px;
-$footer-soc-tw-y: 128px;
+$footer-soc-tw-y: 214px;
 $footer-soc-tw-offset-x: 0px;
-$footer-soc-tw-offset-y: -128px;
+$footer-soc-tw-offset-y: -214px;
 $footer-soc-tw-width: 20px;
 $footer-soc-tw-height: 16px;
-$footer-soc-tw-total-width: 206px;
-$footer-soc-tw-total-height: 204px;
+$footer-soc-tw-total-width: 338px;
+$footer-soc-tw-total-height: 284px;
 $footer-soc-tw-image: 'sprite.png';
-$footer-soc-tw: (0px, 128px, 0px, -128px, 20px, 16px, 206px, 204px, 'sprite.png', 'footer-soc-tw', );
+$footer-soc-tw: (0px, 214px, 0px, -214px, 20px, 16px, 338px, 284px, 'sprite.png', 'footer-soc-tw', );
 $soc-fb-name: 'soc-fb';
-$soc-fb-x: 128px;
-$soc-fb-y: 0px;
-$soc-fb-offset-x: -128px;
-$soc-fb-offset-y: 0px;
+$soc-fb-x: 62px;
+$soc-fb-y: 152px;
+$soc-fb-offset-x: -62px;
+$soc-fb-offset-y: -152px;
 $soc-fb-width: 22px;
 $soc-fb-height: 22px;
-$soc-fb-total-width: 206px;
-$soc-fb-total-height: 204px;
+$soc-fb-total-width: 338px;
+$soc-fb-total-height: 284px;
 $soc-fb-image: 'sprite.png';
-$soc-fb: (128px, 0px, -128px, 0px, 22px, 22px, 206px, 204px, 'sprite.png', 'soc-fb', );
+$soc-fb: (62px, 152px, -62px, -152px, 22px, 22px, 338px, 284px, 'sprite.png', 'soc-fb', );
 $soc-in-name: 'soc-in';
-$soc-in-x: 62px;
-$soc-in-y: 66px;
-$soc-in-offset-x: -62px;
-$soc-in-offset-y: -66px;
+$soc-in-x: 124px;
+$soc-in-y: 152px;
+$soc-in-offset-x: -124px;
+$soc-in-offset-y: -152px;
 $soc-in-width: 22px;
 $soc-in-height: 22px;
-$soc-in-total-width: 206px;
-$soc-in-total-height: 204px;
+$soc-in-total-width: 338px;
+$soc-in-total-height: 284px;
 $soc-in-image: 'sprite.png';
-$soc-in: (62px, 66px, -62px, -66px, 22px, 22px, 206px, 204px, 'sprite.png', 'soc-in', );
+$soc-in: (124px, 152px, -124px, -152px, 22px, 22px, 338px, 284px, 'sprite.png', 'soc-in', );
 $soc-tw-name: 'soc-tw';
 $soc-tw-x: 0px;
-$soc-tw-y: 66px;
+$soc-tw-y: 152px;
 $soc-tw-offset-x: 0px;
-$soc-tw-offset-y: -66px;
+$soc-tw-offset-y: -152px;
 $soc-tw-width: 22px;
 $soc-tw-height: 22px;
-$soc-tw-total-width: 206px;
-$soc-tw-total-height: 204px;
+$soc-tw-total-width: 338px;
+$soc-tw-total-height: 284px;
 $soc-tw-image: 'sprite.png';
-$soc-tw: (0px, 66px, 0px, -66px, 22px, 22px, 206px, 204px, 'sprite.png', 'soc-tw', );
+$soc-tw: (0px, 152px, 0px, -152px, 22px, 22px, 338px, 284px, 'sprite.png', 'soc-tw', );
 $soc-vk-name: 'soc-vk';
-$soc-vk-x: 66px;
-$soc-vk-y: 0px;
-$soc-vk-offset-x: -66px;
-$soc-vk-offset-y: 0px;
+$soc-vk-x: 152px;
+$soc-vk-y: 66px;
+$soc-vk-offset-x: -152px;
+$soc-vk-offset-y: -66px;
 $soc-vk-width: 22px;
 $soc-vk-height: 22px;
-$soc-vk-total-width: 206px;
-$soc-vk-total-height: 204px;
+$soc-vk-total-width: 338px;
+$soc-vk-total-height: 284px;
 $soc-vk-image: 'sprite.png';
-$soc-vk: (66px, 0px, -66px, 0px, 22px, 22px, 206px, 204px, 'sprite.png', 'soc-vk', );
-$spritesheet-width: 206px;
-$spritesheet-height: 204px;
+$soc-vk: (152px, 66px, -152px, -66px, 22px, 22px, 338px, 284px, 'sprite.png', 'soc-vk', );
+$share-fb-name: 'share_fb';
+$share-fb-x: 76px;
+$share-fb-y: 76px;
+$share-fb-offset-x: -76px;
+$share-fb-offset-y: -76px;
+$share-fb-width: 36px;
+$share-fb-height: 36px;
+$share-fb-total-width: 338px;
+$share-fb-total-height: 284px;
+$share-fb-image: 'sprite.png';
+$share-fb: (76px, 76px, -76px, -76px, 36px, 36px, 338px, 284px, 'sprite.png', 'share_fb', );
+$share-in-name: 'share_in';
+$share-in-x: 0px;
+$share-in-y: 76px;
+$share-in-offset-x: 0px;
+$share-in-offset-y: -76px;
+$share-in-width: 36px;
+$share-in-height: 36px;
+$share-in-total-width: 338px;
+$share-in-total-height: 284px;
+$share-in-image: 'sprite.png';
+$share-in: (0px, 76px, 0px, -76px, 36px, 36px, 338px, 284px, 'sprite.png', 'share_in', );
+$share-tw-name: 'share_tw';
+$share-tw-x: 76px;
+$share-tw-y: 0px;
+$share-tw-offset-x: -76px;
+$share-tw-offset-y: 0px;
+$share-tw-width: 36px;
+$share-tw-height: 36px;
+$share-tw-total-width: 338px;
+$share-tw-total-height: 284px;
+$share-tw-image: 'sprite.png';
+$share-tw: (76px, 0px, -76px, 0px, 36px, 36px, 338px, 284px, 'sprite.png', 'share_tw', );
+$share-vk-name: 'share_vk';
+$share-vk-x: 0px;
+$share-vk-y: 0px;
+$share-vk-offset-x: 0px;
+$share-vk-offset-y: 0px;
+$share-vk-width: 36px;
+$share-vk-height: 36px;
+$share-vk-total-width: 338px;
+$share-vk-total-height: 284px;
+$share-vk-image: 'sprite.png';
+$share-vk: (0px, 0px, 0px, 0px, 36px, 36px, 338px, 284px, 'sprite.png', 'share_vk', );
+$spritesheet-width: 338px;
+$spritesheet-height: 284px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($archived-icon, $protected-icon, $star-icon, $date-icon, $sort-icon, $sort-icon-hover, $share-icon, $url-icon, $footer-soc-fb, $footer-soc-tw, $soc-fb, $soc-in, $soc-tw, $soc-vk, );
-$spritesheet: (206px, 204px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($archived-icon, $protected-icon, $star-icon, $date-icon, $sort-icon, $sort-icon-hover, $share-icon, $url-icon, $head-popup-close, $share-popup-close, $footer-soc-fb, $footer-soc-tw, $soc-fb, $soc-in, $soc-tw, $soc-vk, $share-fb, $share-in, $share-tw, $share-vk, );
+$spritesheet: (338px, 284px, 'sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
