--- a/src/styles/sections/popup_header.scss
+++ b/src/styles/sections/popup_header.scss
@@ -34,14 +34,34 @@
             font-size: 13px;
             line-height: 15px;
             color: #37B7EC;
+            float: left;
         }
         .close__popup{
             color: #fff;
             text-decoration: none;
             font-size: 16px;
+            @include sprite($head_popup_close);
+            display: block;
+            float: left;
+            margin-top: 10px;
             :hover{
                 cursor: pointer;
             }
         }
     }
+}
+
+.popup__hide{
+    display: none;
+}
+
+#body__open__popup{
+    display: none;
+    background: rgba(0,0,0,.5);
+    position:fixed;
+    height:100%;
+    width:100%;
+    z-index:99;
+    top: 0;
+    left:0;
 }
