--- a/src/styles/sections/popup_header.scss
+++ b/src/styles/sections/popup_header.scss
@@ -21,6 +21,12 @@
             line-height: 14px;
             color: #fff;
         }
+        .message__mobile{
+            display: none;
+            font-size: 12px;
+            line-height: 14px;
+            color: #fff;
+        }
     }
     &__right{
         float: right;
